# agent-review

./: .gitignore  .graphifyignore  README.md  agent-review  agent-review-flow.mermaid  agent-review.json  pyproject.toml  setup.py
docs/: INSTALL_WITH_AGENT.md  architecture.md
src/agent_review/: cli.py  collector.py  config.py  git_tools.py  models.py  policy.py  retention.py  reviewers.py  runtime_index.py  utils.py
src/agent_review/adapters/: __init__.py  base.py
src/agent_review/prompts/: __init__.py  reviewer.md
src/agent_review/schemas/: __init__.py  review-result.schema.json
templates/core-rules/: claude-CLAUDE-snippet.md  codex-AGENTS-snippet.md  hermes-SOUL-snippet.md
templates/hooks/: claude-stop-hook.sh  codex-wrapper.sh  hermes-hook.sh
tests/: test_review_flow.py
