[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-review"
version = "0.1.0"
description = "Local multi-agent review gate for Claude Code, Codex, and Hermes."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "agent-review contributors" }
]
dependencies = []

[project.scripts]
agent-review = "agent_review.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_review = ["prompts/*.md", "schemas/*.json"]
